# poe-idle

./: Cargo.toml
src/: app.rs  components.rs  constants.rs  data.rs  gameplay.rs  main.rs  plugins.rs  save.rs  ui.rs  visual.rs
src/data/: crafting.rs  database.rs  items.rs  run.rs  talents.rs
src/ui/: crafting.rs  talents.rs  theme.rs
